halfway through XGBoost

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -37,7 +37,7 @@
 \newacronym{nan}{NaN}{Not a Number}
 \newacronym{nfegs}{NF-EGS}{Near Field EGS}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
-\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& $k$-means Clustering}
+\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{ovo}{OvO}{One versus One}
