--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -85,7 +85,7 @@ This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is struct
 \end{minipage} \hfill
 \begin{minipage}[b]{0.44\textwidth}
 \includegraphics[scale=0.44]{Figure-ThesisWorkflow}
-\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter number placement indicates the content presented within each chapter.}
+\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter numbers are circled.}
 \label{fig:thesis_flow}
 \end{minipage}
 \begin{itemize}
