--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -3,7 +3,7 @@
 \section{Geothermal Systems}\label{ch2:geosys}
 \subsection{Heat Origins}\label{ch2:heatorig}
 \subsubsection{Accretion}\label{ch2:accrete}
-The story of geothermal energy begins with the birth of planet Earth. Approximately 4.56 billion years ago \citep{allegre_age_1995, patterson_age_1956}, the Earth coalesced as a molten body heated by repeated impacts with other objects in the early solar system, like the planetesimal collision responsible for the formation of the Moon \citep{stevenson_origin_2014}. Over tens of millions of years, the Earth compacted, cooled, and differentiated, settling into the now familiar layered structure of a solid inner core, liquid outer core, viscous mantle, and outermost brittle crust \citep[p.\ 7]{press_understanding_2004}. \textbf{DIAGRAM OF EARTH STRUCTURE} The intense heat from that early accretionary history remains concentrated in the core, where temperatures --- a matter of continued scientific inquiry --- fall in the range of $6000\pm500$~K \citep[p.\ 372]{fowler_solid_2005}. Present day heat flux estimates for the whole Earth amount to 87 mW/m$^2$, $\approx 60\%$ of which flows through conductive and convective pathways from the deep interior to outermost crust \citep{stein_heat_1995}. Diffuse conductive heat transfer occurs everywhere across %of
+The story of geothermal energy begins with the birth of planet Earth. Approximately 4.56 billion years ago \citep{allegre_age_1995, patterson_age_1956}, the Earth coalesced as a molten body heated by repeated impacts with other objects in the early solar system, like the planetesimal collision responsible for the formation of the Moon \citep{stevenson_origin_2014}. Over tens of millions of years, the Earth compacted, cooled, and differentiated, settling into the now familiar layered structure of a solid inner core, liquid outer core, viscous mantle, and outermost brittle crust \citep[p.\ 7]{press_understanding_2004}. \textbf{DIAGRAM OF EARTH STRUCTURE} The intense heat from that early accretionary history remains concentrated in the core, where temperatures --- a matter of continued scientific debate --- fall in the range of $6000\pm500$~K \citep[p.\ 372]{fowler_solid_2005}. Present day heat flux estimates for the whole Earth amount to 87 mW/m$^2$, $\approx 60\%$ of which flows through conductive and convective pathways from the deep interior to outermost crust \citep{stein_heat_1995}. Diffuse conductive heat transfer occurs everywhere across %of
 the Earth’s surface, but heat flow concentrates along tectonic plate boundaries. In fact, the subduction-sourced volcanoes that ring the Pacific Ocean, divergent zones at the mid-ocean ridges and East African rift, and major strike-slip boundaries like the San Andreas fault zone all mark locations where focused heat anomalies are already being tapped by geothermal installations \citep[p.\ 16]{dipippo_geothermal_2012}.
 
 \subsubsection{Radioactive Decay}\label{ch2:radio}
@@ -147,7 +147,7 @@ Resistivity survey      & thermal conductivity, temperature gradient            
 Seismic survey          & depth to mantle, intrusive igneous features              \\
 Temperature survey      & heat flow, geothermal gradient                          
 \end{tabular}
-\caption[Data collection methods for geothermal derisking]{Data collection methods useful for characterizing and derisking Earth subsystems that influence geothermal favorability}
+\caption[Data collection methods for geothermal derisking]{Data collection methods useful for characterizing Earth subsystems that influence geothermal favorability.}
 \label{tab:surveytypes}
 \end{table}
 
@@ -174,9 +174,9 @@ Regional or play scale exploration methods adapted from oil \& gas companies inc
 
 Both joint inversion and PFA attempt to identify patterns from sometimes disparate data sets to assist in identifying and characterizing geothermal resources. And both require expert guidance on the weighting of data inputs to create an integrated final product. Machine learning methods can instead determine the appropriate relative weights directly from the data, making results repeatable and open to continuous improvement as additional data becomes available. Advances in data-driven machine learning approaches for pattern recognition and prediction are at the heart of a “digital transformation” in the earth sciences beginning in the late 2010s, driving significant change in how geoscientists in the oil \& gas industry and academia analyze data and derive subsurface insights \citep{gunderson_recent_2020}. National labs and academic programs are embracing the opportunity to apply machine learning to a variety of geothermal problems, with many federally-funded projects currently underway, e.g., image analysis for production-related ground deformation \citep{cavur_dinsar_2021}, real-time prediction of induced seismic events \citep{small_theory_2019}, and identification of faults from seismic data \citep{gao_delineating_2021}.
 
-Supervised learning methods like regression, tree-based ensemble methods, and neural networks need labeled example data, e.g., from wells or KGRA studies, to train on before providing predictive value. Unsupervised learning approaches like cluster analysis can learn directly from the structure of unlabeled input data. Studies applying both machine learning methodologies are revisiting play fairway investigations due to the availability of curated data sets. For example, the PFA for the Great Basin region of Nevada originally combined nine data sets (or “features”) by a grouping and weighting workflow to determine favorability for blind geothermal systems \citep{faulds_progress_2017}. As more data were acquired and previous features transformed or refined, the potential feature set progressively grew to over 20 regional layers \citep{brown_machine_2020, faulds_discovering_2019}. A proof of concept \acrlong{ann} (\acrshort{ann}) successfully reproduced the original PFA favorability map, and further efforts illustrated value in applying more advanced machine learning algorithms like principle component analysis paired with k-means clustering \citep{smith_characterizing_2021} and a probabilistic neural network for improved favorability prediction \citep{brown_machine_2020}.
+Supervised learning methods like regression, tree-based ensemble methods, and neural networks all need labeled example data, e.g., from wells or KGRA studies, to train on before providing predictive value. Unsupervised learning approaches like cluster analysis can learn directly from the structure of unlabeled input data. Studies applying both machine learning methodologies are revisiting play fairway investigations due to the availability of curated data sets. For example, the PFA for the Great Basin region of Nevada originally combined nine data sets (or “features”) by a grouping and weighting workflow to determine favorability for blind geothermal systems \citep{faulds_progress_2017}. As more data were acquired and previous features transformed or refined, the potential feature set progressively grew to over 20 regional layers \citep{brown_machine_2020, faulds_discovering_2019}. A proof of concept \acrlong{ann} (\acrshort{ann}) successfully reproduced the original PFA favorability map, and further efforts illustrated value in applying more advanced machine learning algorithms like principle component analysis paired with k-means clustering \citep{smith_characterizing_2021} and a probabilistic neural network for improved favorability prediction \citep{brown_machine_2020}.
 
-In another example, \citeauthor{bielicki_hydrogeolgic_2015} defined play fairways in southwest \acrlong{nm} (\acrshort{nm}) using a combination of twelve geologic, geophysical, and geochemical features to describe permeability, heat, and fluid risk elements \citeyear{bielicki_hydrogeolgic_2015}. A subsequent project evaluated an augmented 20-feature data set from the same area. Using a semi-supervised principle component analysis and k-means clustering framework to define KGRA-associated groupings, the study found each KGRA cluster correlated strongly with the four regional physiographic provinces: the Basin and Range, Colorado Plateau, Mogollon-Datil Volcanic Field, and Rio Grande Rift \citep{pepin_new_2018}. A separate effort led by LANL tested an unsupervised learning method, \acrlong{nmfk} or \acrshort{nmfk}, on a 22-feature data set \citep{vesselinov_discovering_2020}. This method determines feature signatures for each cluster, and results suggest each physiographic province may have its own unique set of features that can signal the existence of hidden geothermal resources. 
+In another example, \citet{bielicki_hydrogeolgic_2015} defined play fairways in southwest \acrlong{nm} (\acrshort{nm}) using a combination of twelve geologic, geophysical, and geochemical features to describe permeability, heat, and fluid risk elements. A subsequent project evaluated an augmented 20-feature data set from the same area. Using a semi-supervised principle component analysis and k-means clustering framework to define KGRA-associated groupings, the study found each KGRA cluster correlated strongly with the four regional physiographic provinces: the Basin and Range, Colorado Plateau, Mogollon-Datil Volcanic Field, and Rio Grande Rift \citep{pepin_new_2018}. A separate effort led by LANL tested an unsupervised learning method, \acrlong{nmfk} or \acrshort{nmfk}, on a 22-feature data set \citep{vesselinov_discovering_2020}. This method determines feature signatures for each cluster, and results suggest each physiographic province may have its own unique set of features that can signal the existence of hidden geothermal resources. 
 
 In all studies conducted thus far for the Southwest New Mexico study area, geothermal favorability models provide a deterministic view of problem. This thesis reinvestigates the NM study area with focused attention on the variety of uncertainties involved in a machine learning approach, as well as how those uncertainties can impact the final model results and the choices made by E\&P decision-makers.
 
