--- a/templates/main.tex
+++ b/templates/main.tex
@@ -71,9 +71,11 @@
   multi-part-units = repeat
 ]{siunitx}
 
+\usepackage{enumitem}
 \usepackage{xparse}
 \ExplSyntaxOn
 
+%% support multiple citations with page numbers
 \makeatletter
 \NewDocumentCommand{\multicitep}{m}
  {
