--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,44 @@
 
+@misc{xgboost_developers_xgboost_2020,
+	title = {{XGBoost} {Parameters} — xgboost 1.5.0-dev documentation},
+	url = {https://xgboost.readthedocs.io/en/latest/parameter.html},
+	urldate = {2021-06-26},
+	journal = {XGBoost},
+	author = {{xgboost developers}},
+	year = {2020},
+}
+
+@misc{jain_xgboost_2016,
+	title = {{XGBoost} {Parameters} {\textbar} {XGBoost} {Parameter} {Tuning}},
+	url = {https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/},
+	abstract = {This article explains XGBoost parameters and xgboost parameter tuning in python with example and takes a practice problem to explain the xgboost algorithm.},
+	urldate = {2021-06-26},
+	journal = {Analytics Vidhya},
+	author = {Jain, Aarshay},
+	month = mar,
+	year = {2016},
+}
+
+@misc{chen_dmlcxgboost_2021,
+	title = {dmlc/xgboost},
+	copyright = {Apache-2.0},
+	url = {https://github.com/dmlc/xgboost},
+	abstract = {Scalable, Portable and Distributed Gradient Boosting (GBDT, GBRT or GBM) Library,  for Python, R, Java, Scala, C++ and more. Runs on single machine, Hadoop, Spark, Dask, Flink and DataFlow},
+	urldate = {2021-06-26},
+	publisher = {Distributed (Deep) Machine Learning Community},
+	author = {Chen, Tianqi},
+	month = jun,
+	year = {2021},
+	note = {original-date: 2014-02-06T17:28:03Z},
+}
+
+@inproceedings{chen_xgboost_2016,
+	title = {Xgboost: {A} scalable tree boosting system},
+	author = {Chen, Tianqi and Guestrin, Carlos},
+	year = {2016},
+	pages = {785--794},
+}
+
 @misc{brownlee_recursive_2020,
 	title = {Recursive {Feature} {Elimination} ({RFE}) for {Feature} {Selection} in {Python}},
 	url = {https://machinelearningmastery.com/rfe-feature-selection-in-python/},
